# voyage-touch

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.py  test.py
arduino/: arduino.ino
collect_data/: README.md  manual.py
examples/: assc_heuristic.py  raw_data.py  raw_data_four_fsr.py  raw_data_test.py  test.py
experiments/: README.md  evaluate_model.py  manual.py
firmware/four_fsr/: four_fsr.ino
firmware/fsr/: fsr.ino
firmware/test/: test.ino
voyage_touch/: __init__.py  sensor_reading.py  touch_sensor.py
voyage_touch/assc/: __init__.py  assc.py  evaluate.py  markovian.py  model.py  timeseries.py
voyage_touch/assc/data/: __init__.py  load.py  markovian.py  store.py
voyage_touch/assc/policies/: __init__.py  fsr_heuristic.py
voyage_touch/sensor/: __init__.py  sensor.py  sensor_reader.py  sensor_type.py
